# galaxy-engine

./: .gitignore  CMakeLists.txt  Makefile  imgui.ini
include/: env-vars.h.in  galaxy.h  gconfig.h  gmenu.h  grenderer.h  gshader.h  gwindow.h  logger.h  vertex.h
src/: galaxy.cpp  gconfig.cpp  gmenu.cpp  grenderer.cpp  gshader.cpp  gwindow.cpp  logger.cpp  main.cpp  vertex.cpp
src/shaders/: varying.def.sc
